--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script>
+       var ws = new WebSocket('ws://localhost:3001');
+       // event emmited when connected
+       ws.onopen = function () {
+           console.log('websocket is connected ...')
+           // sending a send event to websocket server
+           ws.send('connected')
+       }
+       // event emmited when receiving message
+       ws.onmessage = function (ev) {
+           console.log(ev);
+       }
+      </script>
+
     <title>React App</title>
   </head>
   <body>
